--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -72,7 +72,7 @@
         border: none;
         z-index: 2;
         transition: 1s;
-        transition-property: height width;
+        transition-property: height widthe -o;
         width: 54px;
         height: 54px;
         border-radius: 50%;
